Kubernetes/modify_cilium_policy/basic_port_export/assets/yaml/export_port_from_cilium.yaml
# allow-monitoring-nodeports.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: allow-monitoring-nodeports
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - world
    toPorts:
    - ports:
      - port: "30001"
        protocol: TCP
      - port: "30002"
        protocol: TCP
      - port: "3100"
        protocol: TCP
