Kubernetes/modify_cilium_policy/basic_port_export/assets/yaml/loki_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-grafana-to-loki-tcp-ingress
  namespace: monitoring # Where the Loki service and pods are located
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: loki # Selects the Loki pods based on their label
  ingress: # Defines rules for incoming traffic to the selected pods
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring # Selects the namespace where Grafana pods are running
      podSelector:
        matchLabels:
          helm.sh/chart: grafana-8.12.1 # Selects the Grafana pods based on their label (replace with your actual Grafana pod label)
    ports:
    - protocol: TCP
      port: 3100 # Allows TCP traffic on port 3100, which is the default Loki HTTP port
